<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="4dp"
    tools:layout_editor_absoluteY="16dp">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="230dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewNombreAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextViewNombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewContraseña"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextViewContraseña"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="wrap_content"
                android:layout_height="67dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="259dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="179dp"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:text="@string/buttonLogin"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonModificar"
            android:layout_width="179dp"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:text="@string/buttonModificar"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>