<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intents.Activity4">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNuevoNombre"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewNuevoNombre"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="278dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNuevaContraseña"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewNuevaContraseña"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextContrasena"
                    android:layout_width="278dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGuardar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/buttonGuardar"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>